fixed elements direction in Comments -> MetaData on mobile visual improvements

--- a/M9/src/shared/CardsList/Card/MetaData/metadata.css
+++ b/M9/src/shared/CardsList/Card/MetaData/metadata.css
@@ -1,6 +1,6 @@
 .metaData {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   align-items: center;
 }
 
@@ -13,12 +13,24 @@
 }
 
 @media all and (min-width: 1024px) {
-  .metaData {
-    flex-flow: row-reverse nowrap;
+  .metaData.t-reverse {
+    flex-direction: row-reverse;
     justify-content: flex-end;
   }
 
-  .metaData > :not(:first-child) {
+  .metaData.t-reverse > :not(:first-child) {
+    padding-left: unset;
+    padding-right: 5px;
+  }
+}
+
+@media all and (min-width: 1540px) {
+  .metaData.d-reverse {
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+  }
+
+  .metaData.d-reverse > :not(:first-child) {
     padding-left: unset;
     padding-right: 5px;
   }
