--- a/M9/src/shared/CardsList/Card/Post/CommentsBlock/CommentItem/commentitem.css
+++ b/M9/src/shared/CardsList/Card/Post/CommentsBlock/CommentItem/commentitem.css
@@ -21,6 +21,7 @@
 .comment {
   padding-left: 20px;
   padding-top: 5px;
+  flex-basis: 100%;
 }
 
 .downVote {
